unpackaged/main/default/objects/Ops_Order__c/fields/ShippingMethod__c.field-meta.xml
<CustomField>
    <fullName>ShippingMethod__c</fullName>
    <label>Shipping Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>