unpackaged/main/default/objects/Ops_Order__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Partially Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Reopened by Job</fullName>
            </value>
            <value>
                <fullName>Reopened by Updated Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>