unpackaged/main/default/objects/Ops_Order__c/fields/SubmissionComments__c.field-meta.xml
<CustomField>
    <fullName>SubmissionComments__c</fullName>
    <label>Submission Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>