unpackaged/main/default/objects/Ops_Order__c/fields/Time_In_Large_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Large_Order_Status__c</fullName>
    <formula>IF( NOT(ISBLANK(Large_Order_Status_Change__c)), (NOW() -  Large_Order_Status_Change__c)*24,(NOW()- CreatedDate)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time In Large Order Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>