unpackaged/main/default/objects/Ops_Order__c/fields/Time_in_Large_Order_Status_bus__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Large_Order_Status_bus__c</fullName>
    <formula>IF(NOT(ISBLANK(NOW())),
ROUND(9 * (
(5 * FLOOR((DATEVALUE(NOW()) - DATE(1996, 01, 01)) / 7) +
MIN(5,
MOD(DATEVALUE(NOW()) - DATE(1996, 01, 01), 7) +
MIN(1, 24 / 10 * (MOD(NOW() - DATETIMEVALUE('1996-01-01 13:00:00'), 1)))
))
-
(5 * FLOOR((DATEVALUE(Large_Order_Status_Change__c) - DATE(1996, 01, 01)) / 7) +
MIN(5,
MOD(DATEVALUE(Large_Order_Status_Change__c) - DATE(1996, 01, 01), 7) +
MIN(1, 24 / 10 * (MOD(
IF(HOUR(TIMEVALUE(Large_Order_Status_Change__c)) &gt;= 13 &amp;&amp; HOUR(TIMEVALUE(Large_Order_Status_Change__c)) &lt;= 23,
NOW(),
IF( HOUR(TIMEVALUE(Large_Order_Status_Change__c)) &lt; 13,
DATETIMEVALUE(
TEXT(DATEVALUE(Large_Order_Status_Change__c))
+
" " +
'13:00:00'
),
DATETIMEVALUE(
TEXT(DATEVALUE(Large_Order_Status_Change__c))
+
" " +
'23:00:00'
)
)
)
- DATETIMEVALUE('1996-01-01 13:00:00'), 1
)))
))
),2),(NOW()- CreatedDate)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Large Order Status (bus.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>