unpackaged/main/default/objects/Ops_Order__c/fields/Xometry_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Quote_ID__c</fullName>
    <label>Quote ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>