unpackaged/main/default/objects/Ops_Order__c/fields/XometryOpsOrderID__c.field-meta.xml
<CustomField>
    <fullName>XometryOpsOrderID__c</fullName>
    <externalId>true</externalId>
    <label>Xometry Ops Order ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>