unpackaged/main/default/objects/Ops_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ManufacturingProcess__c</columns>
    <columns>Stage__c</columns>
    <columns>POD__c</columns>
    <columns>OrderDueDate__c</columns>
    <columns>ShippingMethod__c</columns>
    <columns>ShippingService__c</columns>
    <columns>XometryOpsOrderID__c</columns>
    <columns>CustomerNotes__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>PONumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>