unpackaged/main/default/objects/Ops_Order__c/listViews/CancellationApproverQueue_Ops_Order.listView-meta.xml
<ListView>
    <fullName>CancellationApproverQueue_Ops_Order</fullName>
    <columns>Order_DateTime__c</columns>
    <columns>CancellationRequestSubmittedDate__c</columns>
    <columns>CancellationRequestSubmittedByName__c</columns>
    <columns>NAME</columns>
    <columns>POD__c</columns>
    <columns>ERPStatus__c</columns>
    <columns>CancellationPartID__c</columns>
    <columns>CancellationDollarAmount__c</columns>
    <columns>CancellationReasonCode__c</columns>
    <columns>CancellationReplacementOrder__c</columns>
    <columns>CancellationReplacementOrderNumber__c</columns>
    <columns>CancellationReplacementOrderAmount__c</columns>
    <columns>CancellationRequestStatus__c</columns>
    <columns>CancellationCSuiteApprovedBy__c</columns>
    <columns>SubmissionComments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CancellationRequestStatus__c</field>
        <operation>equals</operation>
        <value>Approved,Approved By C-Suite,Cancelled by DFM/CM,Denied By C-Suite,Pending C-Suite Approval,Rejected,Replaced,Saved,Submitted,Under CPC Review</value>
    </filters>
    <label>Cancellation Approver Queue</label>
    <sharedTo>
        <group>CancellationRequestGroup</group>
    </sharedTo>
</ListView>