unpackaged/main/default/objects/Ops_Order__c/listViews/Impodsters_POD.listView-meta.xml
<ListView>
    <fullName>Impodsters_POD</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OrderDueDate__c</columns>
    <columns>ManufacturingProcess__c</columns>
    <columns>POD__c</columns>
    <columns>ShippingMethod__c</columns>
    <columns>ShippingService__c</columns>
    <columns>XometryOpsOrderID__c</columns>
    <columns>CustomerNotes__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>POD__c</field>
        <operation>equals</operation>
        <value>Impodsters</value>
    </filters>
    <label>Impodsters POD</label>
    <sharedTo>
        <roleAndSubordinatesInternal>DFMImpodsters</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>