unpackaged/main/default/objects/Ops_Order__c/listViews/Large_Order_Review.listView-meta.xml
<ListView>
    <fullName>Large_Order_Review</fullName>
    <columns>NAME</columns>
    <columns>OrderTotal__c</columns>
    <columns>AllOrdersTotal__c</columns>
    <columns>POD__c</columns>
    <columns>LargeOrderStatus__c</columns>
    <columns>Stage__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ERPStatus__c</columns>
    <columns>Cases_In_Progress__c</columns>
    <columns>Jobs_In_Progress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Large_Order__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>ERPStatus__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Complete,Expired,Rejected,Rescinded,Vendor Completed,Shipped,Order Cancelled</value>
    </filters>
    <filters>
        <field>LargeOrderStatus__c</field>
        <operation>notEqual</operation>
        <value>Large Order Review Process Complete</value>
    </filters>
    <label>Large Order Review</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Service_Leadership</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>