unpackaged/main/default/objects/Ops_Order__c/listViews/SM_Cancellation_Approver_Queue.listView-meta.xml
<ListView>
    <fullName>SM_Cancellation_Approver_Queue</fullName>
    <columns>Order_DateTime__c</columns>
    <columns>CancellationRequestSubmittedDate__c</columns>
    <columns>CancellationReplacementOrder__c</columns>
    <columns>NAME</columns>
    <columns>ERPStatus__c</columns>
    <columns>CancellationPartID__c</columns>
    <columns>CancellationDollarAmount__c</columns>
    <columns>CancellationReasonCode__c</columns>
    <columns>CancellationReplacementOrderNumber__c</columns>
    <columns>CancellationReplacementOrderAmount__c</columns>
    <columns>CancellationRequestStatus__c</columns>
    <columns>CancellationCSuiteApprovedBy__c</columns>
    <columns>SubmissionComments__c</columns>
    <columns>CancellationRequestSubmittedByName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CancellationRequestStatus__c</field>
        <operation>equals</operation>
        <value>Pending C-Suite Approval,Submitted,Under CPC Review</value>
    </filters>
    <label>SM Cancellation Approver Queue</label>
    <sharedTo>
        <role>CPC_Leadership</role>
    </sharedTo>
</ListView>